--- a/src/index.css
+++ b/src/index.css
@@ -134,8 +134,8 @@
 }
 
 .blue__gradient {
-  background: linear-gradient(180deg, rgba(188, 165, 255, 0) 0%, #214d76 100%);
-  filter: blur(123px);
+  background: linear-gradient(10deg, rgba(188, 165, 255, 0) 65%, #14b8a6 180%);
+  //filter: blur(123px);
 }
 
 .pink__gradient {
